--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -1,40 +1,37 @@
 /* Banner style */
 .body-color {
-    width: 2000px;
-    height: 7335px;
+    margin: 0;
+    padding: 0;
+    width: 1600px;
+    height: 733px;
     background: #FFF;
 }
 
 .banner {
-    border-radius: 16px;
+    border-radius: 20px;
     margin: 0 auto;
+    margin-right: auto;
     margin-left: 10px;
-    margin-top: 40px;
+    margin-top: 50px;
     width: 1320px;
     height: 600px;
 }
 
-.back-img {
-    margin-bottom: 22px;
-}
-
 
 .img-back {
-    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
-    margin: -625px;
-    margin-left: 20px;
-    margin-right: 10px;
-    margin-bottom: 50px;
-    text-align: center;
-    width: 1300px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../resources/Banner\ Image.png);
+    width: 1320;
     height: 600px;
-    border-radius: 16px;
+    border-radius: 15px;
+    background-position: center;
+    background-size: cover;
 }
 
 .banner-tittle {
-    color: #FFF;
     padding: 140px 340px 200px;
-    margin-top: 30px;
+    margin-top: 80px;
+    color: #FFF;
+
 
 }
 
@@ -42,12 +39,79 @@
     font-size: 30px;
     font-weight: 400;
     margin-bottom: 0;
+    text-align: center;
 }
 
 .banner-tittle h2 {
     font-size: 72px;
     font-weight: 900;
-    margin-top: 0;
+    margin-top: 30px;
+    width: 632px;
+    text-align: center;
+}
+
+/* Second Banner Style */
+
+.second-banner-style {
+    color: #FFF;
+}
+
+.btn-banner-tittle {
+    padding: 126px 90px 140px 126px;
+}
+
+.second-banner-tittle {
+
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 88px;
+    letter-spacing: 7px;
+    width: 642px;
+}
+
+.second-banner-description {
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    width: 697px;
+}
+
+.second-banner-style {
+    display: flex;
+}
+
+.second-banner-img {
+    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/Vectorrr.png');
+    width: 1320px;
+    height: 600px;
+    flex-shrink: 0;
+    margin-top: 900px;
+    margin-left: 20px;
+    border-radius: 10px;
+}
+
+.section-banner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.img {
+    display: flex;
+    width: 320px;
+    height: 465px;
+    padding: 0.008px 0px 0px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-primary {
+    padding: 10px;
+}
+
+.img-add {
+    padding: 65px 135px 65px 0;
 }
 
 /* Categori style */
@@ -82,4 +146,50 @@
 .holiday-img {
     width: 802.9px;
     height: 500px;
+    margin-bottom: 120px;
 }
+
+/* Third Section Style */
+.third-section {
+    background-color: #FF0000;
+    width: 1320px;
+    flex-shrink: 0;
+    height: 480px;
+    margin: 120px 0;
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0.10), rgba(255, 0, 0, 0.00));
+    margin-left: 15px;
+    border-radius: 5px;
+
+}
+
+.headiong {
+    color: #070211;
+    font-family: Inter;
+    font-size: 20px;
+    text-align: center;
+    padding: 100px 385px 45px;
+}
+
+.btn {
+    padding: 16px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+   
+}
+
+.third-section-btn {
+    padding: 10px 20px;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    background: #F00;
+    border: none;
+}
+/* Forth Section Styless */
+
+.container{
+   
+}
+
