--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -312,7 +312,7 @@ h1 {
     padding-right: -30px;
     position: relative;
     left: 100px;
-    top: 100px;
+    top: 80px;
     right: 20px;
 }
 
@@ -328,12 +328,11 @@ h1 {
     font-family: Merriweather;
     font-size: 72px;
     font-weight: 900;
-    padding-bottom: 30px;
     padding: 0;
     padding-right: -20px;
     position: relative;
     right: 110px;
-    bottom: 50px;
+    bottom: 80px;
 }
 
 .holiday-description {
@@ -342,8 +341,8 @@ h1 {
     width: 695px;
     position: relative;
     right: 0px;
-    left: 170px;
-    bottom: 50px;
+    left: 160px;
+    bottom: 80px;
 }
 
 /* Reactangal Style */
@@ -373,14 +372,14 @@ h1 {
 
 .rectangal-img-1 {
     position: relative;
-    left: 891px;
-    bottom: 683px;
+    left: 921px;
+    bottom: 633px;
 }
 
 .rectangal-img-44 {
     position: relative;
     left: 750px;
-    bottom: 1055px;
+    bottom: 990px;
 }
 
 /* picture style */
@@ -495,7 +494,7 @@ h1 {
 
 }
 
-.btn {
+.btn-sub {
     padding: 20px 50px;
     border-radius: 0px 50px 50px 0px;
     background: #F00;
